# cdg

./: .gitignore  LICENSE  README.md  build_all.sh  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: 404.html  index.html  sitemap.xml
docs/es/: 404.html  index.html  sitemap.xml
docs/es/search/: search_index.json
docs/mg/: 404.html  index.html  sitemap.xml
docs/mg/gestores/: index.html
docs/mg/search/: search_index.json
docs/rs/: 404.html  index.html  sitemap.xml
docs/rs/gestores/: index.html
docs/rs/mediadores/: index.html
docs/rs/search/: search_index.json
docs/search/: search_index.json
src/: index.md  mkdocs.yml  mkdocs_es.yml  mkdocs_go.yml  mkdocs_mg.yml  mkdocs_pi.yml  mkdocs_rs.yml
src/base/: index.md
src/base/stylesheets/: extra.css
src/es/: Conteúdo Comum.md  RPE_Supervisor.md  Regional.md  Supervisor.md  index.md
src/es/SIGAE/: SIGAE.md
src/es/dupla-gestora-regional/: cdg.md  correcao_rotas.md  execucao.md  planejamento.md  smar.md
src/es/duplagestoraregional/: regional.md
src/es/introducao/: etapas.md  gestao.md  participacao.md  principios.md  requisitos.md
src/es/recomposicao-aprendizagem/: monitoramento-supervisor.md  rpe.md
src/es/recomposicao-aprendizagens/: monitoramento_escola.md  monitoramento_supervisor.md
src/es/rpe/: supervisor.md
src/es/sigae/: cadastrar_plano_acao.md  funcionalidades_gerais.md  importacao_metas.md  importancia_sigae.md  manual.md  painel_riscos.md  registro_execucao_plano_acao.md  (+1 more)
src/go/: index.md
src/mg/: index.md
src/pi/: index.md
src/rs/: index.md
(+174 files in other folders)
