[tool.poetry]
name = "cdg"
version = "0.1.0"
description = ""
authors = ["Ricardo Amigo <amigoricardo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
